--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <!-- Header -->
 
     <header class="header">
-      <h1>Christian Hermann</h1>
+      <div class="header-left">
+        <h1>Christian Hermann</h1>
+      </div>
+      <nav class="header-right">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
     </header>
 
     <!-- Main Content with 3 Columns -->
