--- a/Contact.html
+++ b/Contact.html
@@ -23,10 +23,41 @@
       </nav>
     </header>
 
-    <!-- Main Content with 3 Columns -->
     <div class="main-container">
       <div class="column left"></div>
-      <div class="column center"></div>
+
+      <div class="column center">
+        <!-- contact form -->
+        <div class="contact-form">
+          <form>
+            <div>
+              <label for="fname">First Name:</label>
+              <input type="text" id="fname" name="fname" />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="lname">Last Name:</label>
+              <input type="text" id="lname" name="lname" />
+            </div>
+
+            <br />
+
+            <div>
+              <label for="ename">Email:</label>
+              <input type="text" id="ename" name="ename" />
+            </div>
+
+            <br />
+
+            <div>
+              <input type="submit" />
+            </div>
+          </form>
+        </div>
+      </div>
+
       <div class="column right"></div>
     </div>
 
