Finsihed Career-Simulation Christian Hermann

--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Career-Simulation</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Career Simulation Contact</title>
     <link rel="stylesheet" href="Contact.css" />
     <link
       rel="stylesheet"
@@ -9,8 +11,6 @@
     />
   </head>
   <body>
-    <!-- Header -->
-
     <header class="header">
       <div class="header-left">
         <h1>Christian Hermann</h1>
@@ -27,7 +27,6 @@
       <div class="column left"></div>
 
       <div class="column center">
-        <!-- contact form -->
         <div class="contact-form">
           <form>
             <div>
@@ -61,7 +60,6 @@
       <div class="column right"></div>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
       <div class="social-icons">
         <a href="https://www.linkedin.com/" target="_blank"
