--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Career-Simulation</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Career Simulation Portfolio</title>
     <link rel="stylesheet" href="Portfolio.css" />
     <link
       rel="stylesheet"
@@ -9,8 +11,6 @@
     />
   </head>
   <body>
-    <!-- Header -->
-
     <header class="header">
       <div class="header-left">
         <h1>Christian Hermann</h1>
@@ -23,14 +23,34 @@
       </nav>
     </header>
 
-    <!-- Main Content with 3 Columns -->
     <div class="main-container">
       <div class="column left"></div>
       <div class="column center"></div>
+      <div>
+        <div class="content-box">
+          <h2>First Column</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus architecto dolore soluta earum? Assumenda officiis
+            unde ratione aspernatur aperiam placeat modi maiores deserunt, illo
+            ipsum fugiat, culpa doloribus. Nemo, laudantium?
+          </p>
+          <img src="img/coding.jpg" alt="Travel photo" />
+        </div>
+
+        <div class="content-box">
+          <h2>Second Column</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Necessitatibus architecto dolore soluta earum? Assumenda officiis
+            unde ratione aspernatur aperiam placeat modi maiores deserunt, illo
+            ipsum fugiat, culpa doloribus. Nemo, laudantium?
+          </p>
+        </div>
+      </div>
       <div class="column right"></div>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
       <div class="social-icons">
         <a href="https://www.linkedin.com/" target="_blank"
