--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Career-Simulation</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Career Simulation Home</title>
     <link rel="stylesheet" href="Home.css" />
     <link
       rel="stylesheet"
@@ -9,8 +11,6 @@
     />
   </head>
   <body>
-    <!-- Header -->
-
     <header class="header">
       <div class="header-left">
         <h1>Christian Hermann</h1>
@@ -23,7 +23,6 @@
       </nav>
     </header>
 
-    <!-- Main Content with 3 Columns -->
     <div class="main-container">
       <div class="column left"></div>
 
@@ -46,7 +45,6 @@
       <div class="column right"></div>
     </div>
 
-    <!-- Footer -->
     <footer class="footer">
       <div class="social-icons">
         <a href="https://www.linkedin.com/" target="_blank"
